--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -16,15 +16,13 @@ enable_language(CUDA)
 #Add CMake tools path
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../Tools/CMake")
 
-#options
-set(EXE_REPOSITORY_PATH "")
 
 ##############################################
 #Sources
 
 file(GLOB_RECURSE PROJECT_HEADERS *.h *.cuh)
 file(GLOB_RECURSE PROJECT_SOURCES *.cpp *.cu)
-set (PROJECT_FILES 
+set(PROJECT_FILES 
     ${PROJECT_HEADERS} 
     ${PROJECT_SOURCES} 
 )
@@ -34,7 +32,7 @@ set (PROJECT_FILES
 #Dependencies
 
 #Conan via CMake
-include(${CMAKE_SOURCE_DIR}/Build/conanbuildinfo.cmake)
+include(${CMAKE_CURRENT_SOURCE_DIR}/../Build/conanbuildinfo.cmake)
 conan_basic_setup(TARGETS)
 
 #non-conan dependancies
@@ -45,11 +43,10 @@ find_package(CUDA)
 ##############################################
 #Targets
 
-add_library(${PROJECT_NAME} STATIC ${PROJECT_FILES})
-add_library(synodic::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
+add_library(SoulEngine STATIC ${PROJECT_FILES})
+add_library(synodic::SoulEngine ALIAS SoulEngine)
 
-
-set_target_properties(${PROJECT_NAME} 
+set_target_properties(SoulEngine
 	PROPERTIES 
         LINKER_LANGUAGE CXX
 	   	CXX_EXTENSIONS OFF	
@@ -57,36 +54,29 @@ set_target_properties(${PROJECT_NAME}
         CXX_STANDARD 17
 )
 
-target_include_directories(${PROJECT_NAME}
+target_include_directories(SoulEngine
     PUBLIC 
+        $<INSTALL_INTERFACE:Include>
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/Core/Interface/Application>
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
     PRIVATE
         ${CUDA_INCLUDE_DIRS}
         ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
-target_link_libraries(${PROJECT_NAME}
+target_link_libraries(SoulEngine
     PUBLIC
-      
+        CONAN_PKG::glm
+
     INTERFACE
 
     PRIVATE	
 		CONAN_PKG::glfw
         CONAN_PKG::boost
-        CONAN_PKG::glm
 		CONAN_PKG::stb
 		Vulkan::Vulkan
 )
 
-if ("${EXE_REPOSITORY_PATH}" STREQUAL "")
-
-    #TODO Pull Conan package for default EXE
-
-else()
-
-    add_subdirectory(${EXE_REPOSITORY_PATH})
-
-endif()
 
 ##############################################
 # Installation 
@@ -94,18 +84,15 @@ endif()
 #TODO Does not export headers properly
 
 #Info
-install(TARGETS ${PROJECT_NAME} EXPORT SoulEngineTargets
+install(TARGETS SoulEngine EXPORT SoulEngineTargets
     LIBRARY DESTINATION Libraries
     ARCHIVE DESTINATION Libraries
     RUNTIME DESTINATION Binaries
     INCLUDES DESTINATION Include
 )
 
-set (PROJECT_INTERFACE_HEADERS
-    ${CMAKE_CURRENT_SOURCE_DIR}/Core/Interface/Application/SoulApplication.h
-)
 
-install(FILES ${PROJECT_INTERFACE_HEADERS}
+install(FILES Core/Interface/Application/SoulApplication.h
     DESTINATION Include
     COMPONENT Devel
 )
