--- a/Examples/SoulInfo/CMakeLists.txt
+++ b/Examples/SoulInfo/CMakeLists.txt
@@ -1,6 +1,12 @@
 cmake_minimum_required(VERSION 3.13.1 FATAL_ERROR)
 
+
+##############################################
+#Project 
+
+project(SoulInfo)
+
 ##############################################
 #CMake delegation
 
-add_subdirectory(SoulInfo)
+add_subdirectory(Source)
