--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -1,10 +1,5 @@
 ﻿{
-  "environments": [
-    {
-      "BuildDir": "${projectDir}\\Build"
-    }
-  ],
-
+  "environments": [ { "BuildDir": "${projectDir}\\Build" } ],
   "configurations": [
     {
       "name": "Release",
