Removed pipenv + Streamlined Conan + Prepared Public Includes
Pipenv was too heavyweight and a premature inclusion. Since ocnan is the only python package used, it can replace the pipenv install and makes the setup TONS faster and has less scripting steps.

Conan now makes its package editable, allowing external packages relying on it to bypass a remote fetch and grab data from the local engine copy

In preparation for applications using this, I added a public `Include` with all the header dependancies.

--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -1,7 +1,6 @@
 ﻿{
   "environments": [
-    { "BuildDir": "${projectDir}\\Build" },
-    { "InstallDir": "${projectDir}\\Libraries" }
+    { "BuildDir": "${projectDir}\\Build" }
   ],
   "configurations": [
     {
@@ -9,7 +8,7 @@
       "generator": "Ninja",
       "configurationType": "Release",
       "buildRoot": "${env.BuildDir}\\${name}",
-      "installRoot": "${env.InstallDir}\\${name}",
+      "installRoot": "${env.USERPROFILE}\\CMakeBuilds\\${workspaceHash}\\install\\${name}",
       "cmakeCommandArgs": "",
       "buildCommandArgs": "",
       "ctestCommandArgs": "",
@@ -21,7 +20,7 @@
       "generator": "Ninja",
       "configurationType": "Debug",
       "buildRoot": "${env.BuildDir}\\${name}",
-      "installRoot": "${env.InstallDir}\\${name}",
+      "installRoot": "${env.USERPROFILE}\\CMakeBuilds\\${workspaceHash}\\install\\${name}",
       "cmakeCommandArgs": "",
       "buildCommandArgs": "",
       "ctestCommandArgs": "",
@@ -33,7 +32,7 @@
       "generator": "Ninja",
       "configurationType": "RelWithDebInfo",
       "buildRoot": "${env.BuildDir}\\${name}",
-      "installRoot": "${env.InstallDir}\\${name}",
+      "installRoot": "${env.USERPROFILE}\\CMakeBuilds\\${workspaceHash}\\install\\${name}",
       "cmakeCommandArgs": "",
       "buildCommandArgs": "",
       "ctestCommandArgs": "",
