--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -3,4 +3,4 @@ cmake_minimum_required(VERSION 3.13.1 FATAL_ERROR)
 ##############################################
 #CMake delegation
 
-add_subdirectory(SoulInfo)
+add_subdirectory("Soul Info")
