--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,10 @@
 cmake_minimum_required(VERSION 3.13.1 FATAL_ERROR)
 
+#Set CMake tools location
+list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/Tools/CMake)
+
+#set prior to target definition
+set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
 ##############################################
 #Project 
@@ -42,6 +47,10 @@ set(PROJECT_FILES
     ${PROJECT_HEADERS} 
     ${PROJECT_SOURCES} 
 )
+
+#Provides Visual Studio filter support
+include(source_groups)
+source_groups(${PROJECT_FILES})
 
 
 ##############################################
