Conditional Compute - Build
The compute systems will now conditionally build. This only affects the build system currently. Postproccessor commands will follow.

--- a/Source/Compute/Modules/CMakeLists.txt
+++ b/Source/Compute/Modules/CMakeLists.txt
@@ -3,7 +3,11 @@ cmake_minimum_required(VERSION 3.13.1 FATAL_ERROR)
 ##############################################
 #Compute Platforms
 
-add_subdirectory("CPU")
+if(BUILD_CPU_COMPUTE)
+
+    add_subdirectory("CPU")
+
+endif()
 
 if(BUILD_CUDA_COMPUTE)
 
