Big Cruft Removal
- Unify the frontend for all modules
- Removed Soul PIMPL files
- Modularize remaining modules
- Remove unused files and old implementation that will not be used going forward

--- a/Source/Composition/CMakeLists.txt
+++ b/Source/Composition/CMakeLists.txt
@@ -4,16 +4,19 @@
 
 target_sources(${PROJECT_NAME}
     PRIVATE
-        Component/Component.h
         Entity/Entity.cpp
         Entity/Entity.h
-        Entity/EntityManager.cpp
-        Entity/EntityManager.cpp
-        Entity/SparseEntitySet/SparseEntitySet.h
-        Entity/SparseEntitySet/SparseEntitySet.cpp
-        Entity/SparseEntitySet/AbstractSparseEntitySet.h
-        Entity/SparseEntitySet/AbstractSparseEntitySet.cpp
-        Event/Event.h
-        Event/EventManager.h
-        Event/EventManager.cpp
+        Entity/EntityModule.cpp
+        Entity/EntityModule.h
+        Entity/Modules/Default/DefaultEntityBackend.cpp
+        Entity/Modules/Default/DefaultEntityBackend.h
+        Entity/Modules/Mock/MockEntityBackend.cpp
+        Entity/Modules/Mock/MockEntityBackend.h
+        Event/EventModule.cpp
+        Event/EventModule.h
+        Event/Modules/Default/DefaultEventBackend.cpp
+        Event/Modules/Default/DefaultEventBackend.h
+        Event/Modules/Default/Event.h
+        Event/Modules/Mock/MockEventBackend.cpp
+        Event/Modules/Mock/MockEventBackend.h
 )
