--- a/Source/Transput/CMakeLists.txt
+++ b/Source/Transput/CMakeLists.txt
@@ -4,19 +4,18 @@
 
 target_sources(${PROJECT_NAME}
     PRIVATE
-        Input/Desktop/DesktopInputManager.cpp
-        Input/Desktop/DesktopInputManager.h
-        Input/InputManager.cpp
-        Input/InputManager.h
-        Input/InputSet.cpp
+        Input/Button.h
+        Input/Button.cpp
+        Input/InputModule.h
+        Input/InputModule.cpp
         Input/InputSet.h
-        Input/Key.cpp
-        Input/Key.h
+        Input/Modules/GLFW/GLFWInputBackend.cpp
+        Input/Modules/GLFW/GLFWInputBackend.h
+        Input/Modules/Mock/MockInputBackend.cpp
+        Input/Modules/Mock/MockInputBackend.h
         Resource/Modules/SPIRV/SPIRVLoader.cpp
         Resource/Modules/SPIRV/SPIRVLoader.h
         Resource/Resource.cpp
         Resource/Resource.h
         Resource/ResourceLoader.h
-        Serialization/Serializable.cpp
-        Serialization/Serializable.h
 )
