Reorganized Display and GUI
DisplayModule is now called Window

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -130,8 +130,8 @@ add_subdirectory(Source/Audio)
 add_subdirectory(Source/Composition)
 add_subdirectory(Source/Compute)
 add_subdirectory(Source/Core)
-add_subdirectory(Source/Display)
-add_subdirectory(Source/GUI)
+add_subdirectory(Source/Display/Window)
+add_subdirectory(Source/Display/GUI)
 add_subdirectory(Source/Memory)
 add_subdirectory(Source/Network)
 add_subdirectory(Source/Parallelism)
